--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
 <body>
 
 <header class="header">
-    <a href="home.html" class="logo">
+    <a href="index.html" class="logo">
         <span class="logo-text">
             <span class="skin">Skin</span><span class="olicious">OLicious</span>
         </span>
     </a>
     
     <nav class="nav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="pages/products.html">Products</a>
         <a href="pages/about.html">About</a>
         <a href="pages/contact.html">Contact</a>
@@ -367,3 +367,4 @@
 </body>
 
 </html>
+
