--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>SkinOLicious - Premium Chicken Snacks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-
         * {
             margin: 0;
             padding: 0;
@@ -28,7 +26,6 @@
             padding: 20px 60px;
             position: relative;
             z-index: 100;
-
             background: transparent;
         }
 
@@ -74,6 +71,21 @@
             color: #6ee7b7;
         }
 
+        .nav a.active {
+            color: #6ee7b7;
+            opacity: 1;
+        }
+
+        .nav a.active::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background: #6ee7b7;
+        }
+
         .nav a::after {
             content: '';
             position: absolute;
@@ -88,7 +100,6 @@
         .nav a:hover::after {
             width: 100%;
         }
-
 
         .hero {
             display: flex;
@@ -174,7 +185,6 @@
             background: linear-gradient(90deg, #16a34a, #15803d);
         }
 
-
         .hero-image-container {
             position: relative;
             z-index: 5;
@@ -206,7 +216,6 @@
             transform: scale(1.05) rotate(5deg);
         }
 
-        /* Animation for floating and rotating effect */
         @keyframes floatAndRotate {
             0% { transform: translateY(0px) rotate(5deg); }
             50% { transform: translateY(-30px) rotate(8deg); }
@@ -321,9 +330,8 @@
     </a>
     
     <nav class="nav">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="pages/products.html">Products</a>
-        <a href="pages/about.html">About</a>
         <a href="pages/contact.html">Contact</a>
     </nav>
 </header>
@@ -333,7 +341,7 @@
         <h1>Premium Chicken Snacks</h1>
         <p class="desc">High-quality snacks made with real ingredients for authentic flavor that satisfies every craving.</p>
         <a href="pages/products.html" class="btn">
-            Shop Now <i class="fas fa-arrow-right"></i>
+            Shop Now
         </a>
     </div>
 
@@ -365,6 +373,4 @@
 </script>
 
 </body>
-
 </html>
-
