--- a/pages/contact.html
+++ b/pages/contact.html
@@ -533,10 +533,10 @@
         <a href="https://www.instagram.com/skinolicious_/" class="social-icon">
             <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://xnxx.com/" class="social-icon">
+        <a href="https://www.xnxx.com/" class="social-icon">
             <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://pornhub.com/" class="social-icon">
+        <a href="https://www.pornhub.com/" class="social-icon">
             <i class="fab fa-tiktok"></i>
         </a>
     </div>
@@ -606,4 +606,5 @@
 </script>
 
 </body>
+
 </html>
